--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/stripe-js": "^8.6.0",
     "@tanstack/react-query": "^5.90.15",
     "@vapi-ai/web": "^2.5.2",
     "class-variance-authority": "^0.7.1",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.69.0",
     "react-type-animation": "^3.2.0",
     "sonner": "^2.0.7",
+    "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
   },
